# finverse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: credit_analysis.py  finverse_demo.ipynb  quickstart.py
finverse/: __init__.py
finverse/analysis/: __init__.py  scenarios.py  sensitivity.py
finverse/audit/: __init__.py  benford.py  earnings_quality.py  loughran_mcdonald.py  manipulation.py  model_audit.py
finverse/backtest/: __init__.py  engine.py
finverse/credit/: __init__.py  altman.py  merton.py
finverse/derivatives/: __init__.py  _blacks_model.py  _discount.py  fx.py  rates.py
finverse/export/: __init__.py  excel.py  report.py
finverse/macro/: __init__.py  nelson_siegel.py  var_model.py
finverse/ml/: __init__.py  _ensemble_weights.py  _factor_regime_model.py  _revision_tracker.py  _surprise_model.py  anomaly.py  causal.py  cluster.py  cross_sectional.py  earnings_surprise.py  factor.py  forecast.py  garch.py  macro_factor_rotation.py  nlp.py  price_target_ensemble.py  regime.py
finverse/models/: __init__.py  bonds.py  comps.py  dcf.py  ddm.py  lbo.py  macro.py  options.py  regime_dcf.py  sotp.py  synthetic_peers.py  three_statement.py
finverse/options/: __init__.py  binomial.py  black_scholes.py  chain.py  implied_vol.py  vol_surface.py
finverse/portfolio/: __init__.py  black_litterman.py  cvar_opt.py  hrp.py  optimizer.py  shrinkage.py
finverse/pull/: __init__.py  edgar.py  fred.py  ticker.py
finverse/risk/: __init__.py  _scenarios.py  _stress_engine.py  evt.py  kelly.py  monte_carlo.py  stress_testing.py  var.py
finverse/screen/: __init__.py  screener.py
finverse/utils/: __init__.py  display.py  validate.py
finverse/valuation/: __init__.py  apv.py  real_options.py
tests/: conftest.py  test_dcf.py  test_forecast.py  test_phase4.py  test_phase5.py  test_phase6.py  test_sensitivity.py  test_v07_modules.py
