[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finverse"
version = "0.7.0"
description = "The ML-powered financial modeling toolkit for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "finverse" }]
keywords = [
    "finance", "dcf", "valuation", "machine learning", "economics",
    "lbo", "portfolio", "risk", "credit", "yield curve", "quant",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "xgboost>=2.0.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    "fredapi>=0.5.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
full = [
    "seaborn>=0.12.0",
    "python-pptx>=0.6.21",
    "reportlab>=4.0",
    "hmmlearn>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Nityahapani/finverse"
Repository = "https://github.com/Nityahapani/finverse"
Issues = "https://github.com/Nityahapani/finverse/issues"
Changelog = "https://github.com/Nityahapani/finverse/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["finverse*"]

[tool.setuptools.package-data]
finverse = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
ignore_missing_imports = true
